--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.13.0",
-    "react-yandex-maps": "^4.6.0",
+    "react-router-dom": "^6.0.0",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "webpack": "^5.72.1",
