--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react-dom": "^17.0.2",
     "react-refresh": "^0.13.0",
     "react-router-dom": "^6.0.0",
+    "react-scroll": "^1.8.7",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "swiper": "^8.1.5",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
