--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scroll": "^1.8.7",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "swiper": "^8.1.5",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
