--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-preset-env": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-refresh": "^0.13.0",
     "react-router-dom": "^6.0.0",
     "react-scroll": "^1.8.7",
